--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "starting-backend-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev-server": "tsc-watch --noClear -p tsconfig.json --onSuccess \"node ./dist/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@types/node": "^16.4.10",
+    "source-map-support": "^0.5.19",
+    "tsc-watch": "^4.4.0"
   }
 }
